# ArcadeCollision

./: .gitignore  ArcadeCollision.sln  LICENSE  README.md
ArcCollision/: ArcCollision.vcxproj  CMakeLists.txt  CMakePresets.json  README.md  arc_tests.vcxproj  arc_tests.vcxproj.filters  arc_world.h  arccollision.h  arccollision_api.cpp  broadphase.h  collide.cpp  distance.cpp  dynamic_aabb_tree.cpp  example.c  fixed.cpp  internal.h  shapes.cpp  simd128.h  spatial_hash.cpp  static_bvh.cpp  sweep.cpp  world.cpp
ArcCollision.Benchmarks/: ArcCollision.Benchmarks.csproj  BackendRunners.cs  BenchmarkOptions.cs  BenchmarkScenario.cs  PreparedScenes.cs  Program.cs  QueryBatchBenchmark.cs  README.md
ArcCollision.Ref/: Angle32.cs  ArcCollision.Ref.csproj  ArcWorld.cs  AssemblyInfo.cs  BroadphaseBounds.cs  Collide.cs  CollisionFilter.cs  CollisionLimits.cs  DeterministicHash.cs  Distance.cs  DynamicAabbTree.cs  Fixed.cs  InPlaceSort.cs  Manifold.cs  Polyfills.cs  Shape.cs  ShapeSweep.cs  Shapes.cs  SpatialHash.cs  StaticBvh.cs  Sweep.cs  Transform.cs  Vec2.cs
ArcCollision.Ref.Tests/: CollisionTests.cs
ArcCollision.Tests/: ArcCollision.Tests.csproj  ArcWorldTests.cs  BackendConsistencyRegressionTests.cs  BoundaryRegressionTests.cs  Box2DFeatureParityTests.cs  Box2DPortedTests.cs  BroadphaseScaleTests.cs  CollisionFilterTests.cs  CollisionTests.cs  ConcavePolygonTests.cs  ContactIdTests.cs  ContactOracleTests.cs  DeterminismRegressionTests.cs  DirectionAxisTests.cs  ExhaustiveGridTests.cs  GameReadinessTests.cs  InvarianceTests.cs  OracleDifferentialTests.cs  PolygonInvarianceTests.cs  PolygonOracleTests.cs  PolygonPivotTests.cs  QueryAnyTests.cs  QueryBatchTests.cs  RefBackendUsings.cs  StaticEnableTests.cs  SweepAccuracyTests.cs  TransformUpdateTests.cs  WrapperParityTests.cs
ArcCollision.Tests.Wrapper/: ArcCollision.Tests.Wrapper.csproj  WrapperBackendUsings.cs
ArcCollision.Tests/Support/: FuzzGen.cs  TestGeo.cs  Tolerance.cs
ArcCollision.Wrapper/: ArcCollision.Wrapper.csproj  ArcWorld.cs  Broadphase.cs  Collision.cs  FixedValidation.cs  NativeBuffer.cs  NativeMethods.cs  Polyfills.cs  Primitives.cs  README.md  TestingInternals.cs  Transform.cs
ArcCollision/benchmarks/: integer_bounds_benchmark.cpp
ArcCollision/tests/: c_api_smoke.c  collision_cache_tests.cpp  simd_integer_tests.cpp  test_runner.cpp
Battlefield/: Battlefield.csproj  BattlefieldCollisionFilters.cs  CharacterArt.cs  CollisionBackend.cs  Combat.cs  Direct2DPresenter.cs  Fighter.cs  Game.cs  GameForm.cs  PoisonPool.cs  Program.cs  SpriteLibrary.cs  StageRenderer.cs
Visualizer/: MainForm.cs  Program.cs  Visualizer.csproj  VisualizerCase.cs
test/: aabb-vs-obb.arc-case.json  aabb-vs-polygon.arc-case.json  capsule-vs-aabb.arc-case.json  capsule-vs-capsule.arc-case.json  capsule-vs-polygon.arc-case.json
